--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
-    "dva": "^2.6.0-beta.6",
     "antd": "^3.19.5",
+    "axios": "^0.19.0",
+    "dva": "^2.6.0-beta.6",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "showdown": "^1.9.0",
+    "textarea-caret-position": "^0.1.1"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
@@ -28,7 +32,10 @@
     "umi-plugin-react": "^1.8.4"
   },
   "lint-staged": {
-    "*.{js,jsx}": ["eslint --fix", "git add"]
+    "*.{js,jsx}": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "engines": {
     "node": ">=8.0.0"
