--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "antd": "^3.19.5",
     "axios": "^0.19.0",
     "dva": "^2.6.0-beta.6",
+    "highlight.js": "^9.15.10",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "showdown": "^1.9.0",
+    "remarkable": "^2.0.0",
     "textarea-caret-position": "^0.1.1"
   },
   "devDependencies": {
